<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="title_activity_image">BrowseSnap</string>
    <string name="settings">Settings</string>
    <string name="search_button_label">Search</string>
    <string name="search_hint">Enter a search string</string>
    <string name="title_activity_search">Search Filter</string>
    <string name="image_size">Size:</string>
    <string name="image_color">Color:</string>
    <string name="image_type">Type:</string>
    <string name="save_button">Save</string>
    <string name="title_activity_image_fullview">FullScreen View</string>
    <string name="safe_search">Safe Search:</string>
    <string name="search_imgs">Search Images</string>

    <string-array name="size_array">
        <item>Any size</item>
        <item>Large</item>
        <item>Medium</item>
        <item>Icon</item>
    </string-array>
    <string-array name="color_array">
        <item>Any color</item>
        <item>Full color</item>
        <item>Black and white</item>
        <item>Transparent</item>
    </string-array>
    <string-array name="type_array">
        <item>Any type</item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clip art</item>
        <item>Line drawing</item>
        <item>Animated</item>
    </string-array>
    <string-array name="time_array">
        <item>Any time</item>
        <item>Past 24 hours</item>
        <item>Past week</item>
    </string-array>

</resources>